# artnet-monitor-lumenflow

./: .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  AGENT_PROMPTS.md  ARTNET_IMPLEMENTATION_PLAN.md  BUILD_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dev  HUMAN-NOTES.md  IMPLEMENTATION_REVIEW_REPORT.md  LAUNCH-READINESS-REPORT.md  LICENSE  PROJECT_INSTRUCTIONS.md  QUICKSTART.md  README.md  ROADMAP.md  TEST-INFRASTRUCTURE-COMPLETE.md  TESTS.md  UI-UX.md  UNIFIED_IMPLEMENTATION_PLAN.md  docker-compose.virtual-network.yml  docker-compose.yml  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  test-executor.sh  tsconfig.eslint.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.cargo/: config.toml
.cursor/rules/: ipc-contract.mdc  wayne-howell-light-bytes.mdc
.cursor/skills/apple-aesthetic-ui/: SKILL.md
.cursor/skills/art-net-protocol-patterns/: SKILL.md
.cursor/skills/ipc-api-contract/: SKILL.md  reference.md
.cursor/skills/light-bytes-diagnostics/: SKILL.md
.cursor/skills/spec-compliance/: SKILL.md  reference.md
.cursor/skills/viewport-culling-sync/: SKILL.md
.github/workflows/: benchmarks.yml  ci-heavy.yml  ci.yml  release.yml  security.yml
.pnpm-store/v3/files/00/: 56e27a82fb6b92cca9c9ce174e238beae95da7603979d9b3142bfffafcde42cfafb6e23fb6a6de0f736da6486811b005159e4afa0c0f89a03dd5f77b835606-index.json  e22049009ea62258c0fdc04671b1fb95674eed870587736c63f8e5e2f0d6faf7cc1def64b7b279dd6c0bd8676dc39cf7f4ab33233944f42b906cf8692f59a3-index.json
.pnpm-store/v3/files/01/: 56f0dd42767bd6eaeb8bd2692f409b47e37b53daf296c6a934ec9977da2223299ebe4394385f24eb8b8fd49ff7964f5430147ab0df124f3c30f98f7bb50242-index.json  cca5a20f3f96e43c2fb8a5fa07a84b184491acef92c960ecf48d28e5f9f666c1f5c3af78fe5aabd87be18ed853cc83a49c1eb73410adf230b5fe16a782ca73-index.json
HUMAN_THINKING/: HUMAN-NOTES.md
HUMAN_THINKING/network/: ipProgramming.md
crates/lumenflow_cli/: Cargo.toml
crates/lumenflow_cli/src/: main.rs
crates/lumenflow_cli/src/commands/: info.rs  listen.rs  mock_node.rs  mod.rs  poll.rs  resolve.rs  send.rs  send_all_packets.rs  virtual_console.rs  virtual_network_config.rs  virtual_node.rs
crates/lumenflow_core/: Cargo.toml
crates/lumenflow_core/benches/: hot_path.rs  parser_performance.rs
crates/lumenflow_core/fuzz/: Cargo.toml
crates/lumenflow_core/fuzz/fuzz_targets/: artnet_dmx_parser.rs  artnet_header.rs
crates/lumenflow_core/src/: buffer.rs  device.rs  lib.rs  network.rs
crates/lumenflow_core/src/artnet/: address.rs  command.rs  data_request.rs  diag.rs  dmx.rs  input.rs  ip_prog.rs  mod.rs  nzs.rs  poll.rs  poll_reply.rs  rdm_tunnel.rs  sync.rs  time_sync.rs  timecode.rs  tod.rs  trigger.rs
crates/lumenflow_core/src/engine/: diag_buffer.rs  discovery.rs  jitter_collector.rs  mod.rs  source_tracker.rs  sync_detector.rs  universe_metrics.rs  universe_store.rs
crates/lumenflow_core/src/network/: interfaces.rs
crates/lumenflow_core/tests/: integration_pipeline.rs  property_tests.rs
crates/lumenflow_ui/src/: App.tsx  index.css  main.tsx  theme-init.ts
crates/lumenflow_ui/src-tauri/: Cargo.toml  tauri.conf.json
crates/lumenflow_ui/src-tauri/capabilities/: default.json
crates/lumenflow_ui/src-tauri/icons/: icon.icns
crates/lumenflow_ui/src-tauri/src/: main.rs  network_commands.rs  viewport_culler.rs
docs/: INDEX.md  IPC_API_CONTRACT.md  IPC_API_CONTRACT_REVIEW.md  IPC_BRIDGE_REPORT.md  PLAN_JITTER_CHART.md  RDM_Spec_ANSI_E1-20_2010.txt  art-net4.txt  user-manual.md
docs/api/: CLI_API.md  CORE_API.md  README.md
docs/architecture/: ARCHITECTURE.md
docs/archive/: MIGRATION_MAP_v0.2.13.md  README.md
docs/archive/agent-artifacts/: AGENT_PROMPTS.md
docs/archive/plans/: PLAN_JITTER_CHART.md  SPRINT_PLAN_HUMAN_NOTES_0.2.md  UNIFIED_IMPLEMENTATION_PLAN.md
docs/archive/rca/: ARTNET_DISCOVERY_ANALYSIS_AND_PLAN.md  ARTNET_DISCOVERY_ROOT_CAUSE_ANALYSIS.md  WIRESHARK_MALFORMED_REVIEW.md
docs/archive/reports/: IMPLEMENTATION_REVIEW_REPORT.md  IPC_BRIDGE_REPORT.md  LAUNCH-READINESS-REPORT.md  TEST-INFRASTRUCTURE-COMPLETE.md
docs/deployment/: DEPLOYMENT.md  PERFORMANCE.md
docs/development/: ARTNET_DISCOVERY_ANALYSIS_AND_PLAN.md  ARTNET_DISCOVERY_ROOT_CAUSE_ANALYSIS.md  ARTNET_PROTOCOL_PATTERNS_DMXW_COMPLIANCE.md  ARTNET_SPEC_ASSESSMENT.md  CI_CD_WORKFLOW.md  GUIDE.md  LIGHT_BYTES_DIAGNOSTICS_STANDARD.md  LIGHT_BYTES_SCENARIO_DRY_RUNS.md  MENU_SPEC.md  SETUP.md  SPRINT_PLAN_HUMAN_NOTES_0.2.md  TESTING.md  WIRESHARK_MALFORMED_REVIEW.md
docs/diagnostics/: DIAGNOSTIC_EVENT_CATALOG.md  TROUBLESHOOTING_PLAYBOOK.md
docs/protocol/: ARTNET_COMPLIANCE_MATRIX.md
playwright-report/: index.html
scripts/: create-malformed-negative-pcap.py  dev.sh  install-dependencies.sh  profile.sh  release.sh  setup.sh  spawn-virtual-network.sh  test-real-mode.sh  virtual-network.ports.env  virtual-network.yaml  wireshark-compliance-test.sh
tests/chaos/: network_simulation.rs
tests/concurrency/: loom_tests.rs
tests/fuzz/: property_based_tests.rs
tests/integration/: pipeline.rs
tests/ui/specs/: main.spec.ts
wireshark/: Artnet_DMX_workscho_networkTest_01.pcapng  Network_A2R_SwissonSolo.pcapng  Network_A2R_Swisson_DMXW_01.pcapng  Network_A2R_Swisson_DMXW_02.pcapng  Network_A2R_Swisson_DMXW_03_ConformenceTest.pcapng  artnet_malformed_negative.pcap
(+454 files in other folders)
