[workspace]
resolver = "2"
members = [
    "crates/lumenflow_core",
    "crates/lumenflow_ui/src-tauri",
    "crates/lumenflow_cli",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.76"
license = "GPL-3.0-or-later OR MIT"
repository = "https://github.com/lumenflow/lumenflow"
homepage = "https://lumenflow.dev"
documentation = "https://docs.lumenflow.dev"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"

# Serialization & binary protocols
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
byteorder = "1.5"
zerocopy = { version = "0.7", features = ["derive"] }

# Networking & parsing
nom = "7.1"
socket2 = "0.5"
nix = { version = "0.29", features = ["net", "process"] }

# Concurrency & lock-free structures
crossbeam = "0.8"
dashmap = "5.5"
crossbeam-channel = "0.5"

# Logging & diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
log = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Performance & metrics
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

# Utilities
parking_lot = "0.12"
lazy_static = "1.4"
once_cell = "1.19"
chrono = "0.4"
uuid = { version = "1.7", features = ["v4"] }

# Testing & Verification
criterion = "0.5"
proptest = "1.4"           # Property-based testing
quickcheck = "1.0"         # QuickCheck implementation
quickcheck_macros = "1.0"
arbitrary = { version = "1.3", features = ["derive"] }
tokio-test = "0.4"         # Tokio test utilities
rand = "0.8"               # Random number generation (chaos tests)
loom = "0.7"               # Concurrency verification

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false
