[package]
name = "lumenflow_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tools for Art-Net debugging and introspection"

[[bin]]
name = "lumenflow"
path = "src/main.rs"

[dependencies]
lumenflow_core = { path = "../lumenflow_core" }

clap = { version = "4.5", features = ["derive"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
nix = { workspace = true }
serde_yaml = "0.9"
